Improved the structure of compiled programs by adding using a third-party Graph library rather than a set of edge lists for each basic blocks. Implemented ir codegen for primitive types, binary expressions, conditionals, and function calls.